service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    client.knative.dev/user-image: asia.gcr.io/e-wallet-308708/wannapay-ewallet:latest
    run.googleapis.com/ingress: all
  labels:
    cloud.googleapis.com/location: asia-southeast1
  name: wannapay-ewallet
  namespace: '992639108971'
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/cpu-throttling: true
        autoscaling.knative.dev/maxScale: '100'
        run.googleapis.com/client-name: cloud-console
        run.googleapis.com/cloudsql-instances: e-wallet-308708:asia-southeast1:ewallet-laravel-db
        run.googleapis.com/execution-environment: gen2
      name: wannapay-ewallet
    spec:
      containerConcurrency: 80
      containers:
      - image: asia.gcr.io/e-wallet-308708/wannapay-ewallet:latest
        ports:
        - containerPort: 80
          name: http1
        resources:
          limits:
            cpu: 1
            memory: 256Mi
      serviceAccountName: cloud-sql-client@e-wallet-308708.iam.gserviceaccount.com
      timeoutSeconds: 3600
  traffic:
  - latestRevision: true
    percent: 100
